--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "puppeteer": "^13.0.1"
   }
 }
