--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
