--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Backend ReactYou",
+  "name": "backend_react_you",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
